objects/AUfA_Child__c.object
<CustomObject>
    <label>AUfA Child</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>AUfA Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AUfA Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Roles__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Roles</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Education Center</fullName>
                </value>
                <value>
                    <fullName>Express Center</fullName>
                </value>
                <value>
                    <fullName>Facility Under Construction</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Medical Center</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking Lot</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>School-Based Health Center</fullName>
                </value>
                <value>
                    <fullName>Secondary Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Unoccupied</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AC_Relationship_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AC Relationship Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_or_Remove_Update__c</fullName>
        <label>Add, Remove or Update</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <recordTypes>
        <fullName>Facility</fullName>
        <active>true</active>
        <label>Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Contact_Relationship</fullName>
        <active>true</active>
        <label>Account-Contact Relationship</label>
    </recordTypes>
</CustomObject>